reworked main body css to prevent whitespace, fixed margins and padding for masonry

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,9 +1,15 @@
+@import './fonts.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* rest of the styles */
 
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: "Akira", sans-serif;
+    background-color: #1d2635;
 }
